# spot_demos

./: .gitignore
2020_11_spot_go_to_office/: CMakeLists.txt  package.xml
2020_11_spot_go_to_office/config/: autodoor_segmentation.rviz
2020_11_spot_go_to_office/launch/: transparent_obstacle_detection.launch  transparent_obstacle_detection.launch~
2020_11_spot_go_to_office/scripts/: Untitled.ipynb  autodoor_detect.py
2020_11_spot_go_to_office/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
jsk_2020_11_fetch_and_spot_go_to_kitchen_car/: .gitignore  CMakeLists.txt  README.md  memo.txt  package.xml
jsk_2020_11_fetch_and_spot_go_to_kitchen_car/euslisp/: #speech-recognition-service.l#  .#speech-recognition-service.l  define-mission.l  demo.l  draft.l  elevator-action.l  force-go-through-3f-auto-door.l  get-kitchen-car-lunch.l  get-lunch-box.l  go-to-2f-hall.l  go-to-73b2.l  go-to-kitchen-car.l  go-to-office-with-escape.l  go-to-office.l  main-spot.l  main.l  memo.txt  office-only-demo.l  pass-mission-from-fetch-to-spot.l  speech-recognition-service.l  utils.l
jsk_2020_11_fetch_and_spot_go_to_kitchen_car/launch/: demo_env.launch  demo_env_spot.launch  hsi_color_filter.launch  obinata_office_fetch_bringup.launch
jsk_2020_11_fetch_and_spot_go_to_kitchen_car/scripts/: switchbot.py
scripts/: autodoor_detect.py  (+1 more)
switchbot_ros/: CMakeLists.txt  README.md  package.xml
switchbot_ros/msg/: CommandTopic.msg
switchbot_ros/scripts/: switchbot.py  switchbot_ros_continuous_press_server.py  switchbot_ros_server.py
switchbot_ros/srv/: Command.srv
(+4 files in other folders)
