<?xml version="1.0"?>
<package>
  <name>2020_11_spot_go_to_office</name>
  <version>0.0.0</version>
  <description>Spot's going to the office at eng2-3f</description>

  <author email="mqcmd196@hotmail.co.jp">Yoshiki Obinata</author>
  <maintainer email="mqcmd196@hotmail.co.jp">Yoshiki Obinata</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>spoteus</run_depend>

  <export>
  </export>
</package>
